# mp3-bluetooth

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.old
main/: CMakeLists.txt  main.c  sd-storage.c  storage.h
main/bluetooth/: bt_module.c
main/controller/: controller_module.c
main/display/: display_module.c  u8g2_esp32_hal.c
main/include/: song.h
main/includes/: bt_module.h  controller_module.h  display_module.h  menu_module.h  song.h  storage.h  u8g2_esp32_hal.h
main/menu/: menu_module.c
main/src/: sd-storage.c
main/storage/: sd-storage.c
